--- a/Gallag.vcxproj
+++ b/Gallag.vcxproj
@@ -187,9 +187,11 @@
     <ClInclude Include="Charactor.h" />
     <ClInclude Include="ChildView.h" />
     <ClInclude Include="CInput.h" />
+    <ClInclude Include="ColliderManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Gallag.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
@@ -200,8 +202,10 @@
     <ClCompile Include="Charactor.cpp" />
     <ClCompile Include="ChildView.cpp" />
     <ClCompile Include="CInput.cpp" />
+    <ClCompile Include="ColliderManager.cpp" />
     <ClCompile Include="Gallag.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -217,8 +221,12 @@
     <None Include="res\Gallag.rc2" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\IDB_BULLET.bmp" />
-    <Image Include="..\..\IDB_CRAFT.bmp" />
+    <Image Include="..\..\..\IDB_BEE01.bmp" />
+    <Image Include="..\..\..\IDB_BEE02.bmp" />
+    <Image Include="..\..\..\IDB_BEE03.bmp" />
+    <Image Include="..\..\..\IDB_BEE04.bmp" />
+    <Image Include="..\..\..\IDB_BULLET.bmp" />
+    <Image Include="..\..\..\IDB_CRAFT.bmp" />
     <Image Include="res\bitmap1.bmp" />
     <Image Include="res\Gallag.ico" />
   </ItemGroup>
