--- a/Gallag.vcxproj.filters
+++ b/Gallag.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="CInput.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Monster.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ColliderManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Gallag.cpp">
@@ -74,6 +80,12 @@
     <ClCompile Include="CInput.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Monster.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ColliderManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Gallag.rc">
@@ -92,10 +104,22 @@
     <Image Include="res\bitmap1.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\IDB_CRAFT.bmp">
+    <Image Include="..\..\..\IDB_CRAFT.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="..\..\IDB_BULLET.bmp">
+    <Image Include="..\..\..\IDB_BULLET.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="..\..\..\IDB_BEE01.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="..\..\..\IDB_BEE02.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="..\..\..\IDB_BEE03.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="..\..\..\IDB_BEE04.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
