--- a/Gallag.vcxproj.filters
+++ b/Gallag.vcxproj.filters
@@ -101,16 +101,10 @@
     <Image Include="res\Gallag.ico">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="res\IDB_BULLET.bmp">
-      <Filter>리소스 파일</Filter>
-    </Image>
-    <Image Include="res\IDB_CRAFT.bmp">
+    <Image Include="..\..\..\bitmap1.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\IDB_BEE01.bmp">
-      <Filter>리소스 파일</Filter>
-    </Image>
-    <Image Include="res\bitmap1.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\IDB_BEE02.bmp">
@@ -120,6 +114,15 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\IDB_BEE04.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\IDB_BULLET.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\IDB_CRAFT.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap5.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
