--- a/Gallag.vcxproj
+++ b/Gallag.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="Gallag.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="MapManager.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
@@ -207,6 +208,7 @@
     <ClCompile Include="ColliderManager.cpp" />
     <ClCompile Include="Gallag.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="MapManager.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
